@@ -1,3 +1,7 @@
+  08 Mar 2018; Manuel Friedli <manuel@fritteli.ch>
+  -gitlab-ci-multi-runner-9.4.2.ebuild:
+  dev-vcs/gitlab-ci-multi-runner:  Purge old version of gitlab-ci-multi-runner
+
 *gitlab-ci-multi-runner-9.4.2 (17 Sep 2017)
 *gitlab-ci-multi-runner-9.5.0 (17 Sep 2017)
 
